Revision history for Perl module DIME::Tools

0.04 2016-02-24 NEILB
    - Changed format of this file to follow CPAN::Changes::Spec

0.03 2004-02-16 DALCAZAR
    - unknown changes

0.02 2004-02-16 DALCAZAR
	- First release to CPAN
